# sirius-stream-client-mobile-sdk

./: README.md
android/: README.md  build.gradle  build_and_copy_libs_for_android_studio.sh  copy_source.sh  settings.gradle  update_libs.sh
android/app/: build.gradle  signing-keystore
android/appium/: readme.txt  test_psp_android.py
android/psp-sdk/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/psp-sdk-video-view/: build.gradle
android/psp-sdk/bridge/libs/include/middleware/: Enums.hpp  IChannel.hpp  IClientApp.hpp  IVideoStreamer.hpp
android/psp-sdk/bridge/src/cpp/: ChannelInternal.cpp  ChannelInternal.hpp  ClientAppInternal.cpp  ClientAppInternal.hpp  VideoStreamerInternal.hpp
android/psp-sdk/src/androidTest/java/com/peerstream/psp/sdk/: ExampleInstrumentedTest.java
android/psp-sdk/src/main/: AndroidManifest.xml
android/psp-sdk/src/main/java/com/peerstream/psp/sdk/: PSPBuilders.java  PSPContext.java
android/psp-sdk/src/main/java/com/peerstream/psp/sdk/util/: BridgeFactory.java  LogUtil.java  YUVtoRBG.java
android/psp-sdk/src/main/java/org/webrtc/videoengine/: ViEAndroidGLES20.java  ViERenderer.java  VideoCaptureAndroid.java  VideoCaptureDeviceInfoAndroid.java
android/psp-sdk/src/main/res/values/: strings.xml
android/psp-sdk/src/test/java/com/peerstream/psp/sdk/: ExampleUnitTest.java
documentation/: LICENSE  PSPLibraries.md  README.md
documentation/application/: announcementresult.md  announcepresence.md  application.md  (+13 more)
ios/: .gitignore  PSPClientKit.podspec  README.md  copy_source.sh
mobile/: .gitattributes  .gitignore  .gitmodules  README.md  copy_djinni_sources.sh  copy_middleware_libs.sh  djinni.sh
(+304 files in other folders)
